deploy/kalyanam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: kalyanam
  labels:
    app: kalyanam
  namespace: kalyanam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kalyanam
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kalyanam
    spec:
      serviceAccountName: gke-secret-accessor  # Use the Kubernetes Service Account
      containers:
        - name: angular-app-container
          image: dockerrajmanda/kalyanam:391
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kalyanam
  namespace: kalyanam
spec:
  selector:
    app: kalyanam
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
