deploy/nginx-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsvp-ingress
  namespace: kalyanam
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # Force HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # Force HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-prod"      # Certificate issuer
    nginx.ingress.kubernetes.io/enable-cors: "true"         # Enable CORS
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://4200-cs-*"  # Allow origins
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"  # Allow methods
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"      # Allow headers
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"  # Allow credentials    
spec:
  tls:
    - hosts:
#        - rajmanda-dev.com
#        - www.rajmanda-dev.com
#        - eureka.rajmanda-dev.com  # Add your Eureka subdomain here
        - shravanikalyanam.com
        - www.shravanikalyanam.com
      secretName: rajmanda-dev-letsencrypt-prod-tls
  ingressClassName: nginx  # Set your ingress class here
  rules:
    - host: shravanikalyanam.com
      http:
        paths:
          - path: /.well-known/acme-challenge/
            pathType: Prefix
            backend:
              service:
                name: acme-http-solver
                port:
                  number: 8089  # Replace with the actual port used by cert-manager's HTTP solver - This service is usually created temporarily by cert-manager in the namespace where your ingress and certificate resources are defined - in kalyanam
          - path: /upload/list-images
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090         
          - path: /upload/picture-upload
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090                                 
          - path: /admins/alladmins
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090        
          - path: /rsvp/allrsvps
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090
          - path: /rsvp/saversvp
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090
          - path: /gala-event/all-gala-events
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090
          - path: /gala-event/save-gala-event
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090
          - path: /gala-event/delete-gala-event
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090
          - path: /gala-event/update-gala-event
            pathType: Prefix
            backend:
              service:
                name: rsvpbackend
                port:
                  number: 8090                   
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kalyanam
                port:
                  number: 80
  # - host: rajmanda-dev.com
  #   http:
  #     paths:
  #       - path: /upload/list-images
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090 
  #       - path: /upload/picture-upload
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090        
  #       - path: /admins/alladmins
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090        
  #       - path: /rsvp/allrsvps
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090
  #       - path: /rsvp/saversvp
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090
  #       - path: /gala-event/all-gala-events
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090
  #       - path: /gala-event/save-gala-event
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090
  #       - path: /gala-event/delete-gala-event
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090
  #       - path: /gala-event/update-gala-event
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: rsvpbackend
  #             port:
  #               number: 8090                   
  #       - path: /
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: kalyanam
  #             port:
  #               number: 80
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: eureka-ingress
#   namespace: eureka
#   annotations:
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # Force HTTPS
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
# spec:
#   tls:
#     - hosts:
#         - rajmanda-dev.com
#         - www.rajmanda-dev.com
#         - eureka.rajmanda-dev.com                    # Add your Eureka subdomain here
#       secretName: rajmanda-dev-letsencrypt-prod-tls  # Will be automatically managed by GCP
#   ingressClassName: nginx           # Set your ingress class here
#   rules:
#     - host: eureka.rajmanda-dev.com  # Rule for your Eureka service
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: my-eureka  # Give the  Name of your Eureka service
#                 port:
#                   number: 8761
